// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support Menu renders and matches snapshot 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="show dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={true}
          aria-haspopup={true}
          aria-label="Page tips and support"
          className="dropdown-toggle btn btn-ox"
          disabled={false}
          id="support-menu"
          onClick={[Function]}
          type="button"
        >
          <div
            aria-labelledby="support-menu"
            className="tour-anchor"
            data-tour-anchor-id="support-menu-button"
            onSelect={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 ox-icon ox-icon-question-circle c0"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="control-label"
              title="Page tips and support"
            >
              Help
            </span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 ox-icon ox-icon-angle-down toggle c0"
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby={null}
          className=" hide dropdown-menu show"
        >
          <a
            className="page-tips dropdown-item"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="tour-anchor"
              data-tour-anchor-id="menu-option-page-tips"
            >
              Page Tips
            </div>
          </a>
          <a
            className="-help-link dropdown-item"
            href="https://openstax.secure.force.com/help"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <span>
              Help Articles
            </span>
          </a>
          <a
            className="support-document-link dropdown-item"
            href="https://d3bxy9euw4e147.cloudfront.net/oscms-prodcms/media/documents/openstax_tutor_getting_started_guide_student.pdf"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <div
              className="tour-anchor"
              data-tour-anchor-id="menu-support-document"
            >
              Getting Started Guide
            </div>
          </a>
          <a
            className="-help-link dropdown-item"
            href="/accessibility-statement/"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span>
              Accessibility Statement
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Support Menu renders support links when in a course for student 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="show dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={true}
          aria-haspopup={true}
          aria-label="Page tips and support"
          className="dropdown-toggle btn btn-ox"
          disabled={false}
          id="support-menu"
          onClick={[Function]}
          type="button"
        >
          <div
            aria-labelledby="support-menu"
            className="tour-anchor"
            data-tour-anchor-id="support-menu-button"
            onSelect={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 ox-icon ox-icon-question-circle c0"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="control-label"
              title="Page tips and support"
            >
              Help
            </span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 ox-icon ox-icon-angle-down toggle c0"
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby={null}
          className=" hide dropdown-menu show"
        >
          <a
            className="-help-link dropdown-item"
            href="https://openstax.secure.force.com/help"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <span>
              Help Articles
            </span>
          </a>
          <a
            className="support-document-link dropdown-item"
            href="https://d3bxy9euw4e147.cloudfront.net/oscms-prodcms/media/documents/openstax_tutor_getting_started_guide_student.pdf"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <div
              className="tour-anchor"
              data-tour-anchor-id="menu-support-document"
            >
              Getting Started Guide
            </div>
          </a>
          <a
            className="-help-link dropdown-item"
            href="/accessibility-statement/3"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span>
              Accessibility Statement
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Support Menu renders support links when in a course for teacher 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="show dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={true}
          aria-haspopup={true}
          aria-label="Page tips and support"
          className="dropdown-toggle btn btn-ox"
          disabled={false}
          id="support-menu"
          onClick={[Function]}
          type="button"
        >
          <div
            aria-labelledby="support-menu"
            className="tour-anchor"
            data-tour-anchor-id="support-menu-button"
            onSelect={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 ox-icon ox-icon-question-circle c0"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="control-label"
              title="Page tips and support"
            >
              Help
            </span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 ox-icon ox-icon-angle-down toggle c0"
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby={null}
          className=" hide dropdown-menu show"
        >
          <a
            className="-help-link dropdown-item"
            href="https://openstax.secure.force.com/help"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <span>
              Help Articles
            </span>
          </a>
          <a
            className="support-document-link dropdown-item"
            href="https://d3bxy9euw4e147.cloudfront.net/oscms-prodcms/media/documents/openstax_tutor_getting_started_guide_student.pdf"
            onClick={[Function]}
            onKeyDown={[Function]}
            target="_blank"
          >
            <div
              className="tour-anchor"
              data-tour-anchor-id="menu-support-document"
            >
              Getting Started Guide
            </div>
          </a>
          <a
            className="-help-link dropdown-item"
            href="/accessibility-statement/4"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span>
              Accessibility Statement
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
